--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,5 @@
 *{
+  font-family: 'Inter', sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -71,7 +72,7 @@ section{
 }
 #projects{
     justify-content:flex-start;
-    height: 450vh;
+    height: 250vh;
     scroll-snap-align: start;
 }
 #tag{
@@ -100,6 +101,13 @@ section{
   background-repeat: no-repeat;
 }
 */
+#contact{
+  justify-content: flex-start;
+}
+#contact h1{
+  text-align: center;
+  padding-right: 10%;
+}
 section .name{
   font-size: 100px;
   color: rgb(0, 51, 102);
@@ -146,7 +154,7 @@ section p{
 #title{
   padding-left: 20%;
 }
-#me{
+.gord{
   width: 350px;
   height: 350px;
   border-radius: 50%;
@@ -301,18 +309,61 @@ section .texts p{
 .description h2{
   padding: 0;
   padding-left: 30px;
-  color: rgb(0, 51, 102)
+  color: rgb(0, 51, 102);
+}
+.icons{
+  padding-top: 25px;
+  display: flex;
+  flex-direction: row;
+  align-self: center;
+  text-align: center;
+}
+.larger{
+  display: flex;
+  height: 100px;
+  width: 100px;
+  border-radius: 50px;
+  object-fit: cover;
+  background-color: white;
+  margin-left: 30px;
+  margin-right: 30px;
+
+}
+.end{
+  display: flex;
+  flex-direction: row;
+  align-self: center;
+  width: 80%;
+  padding-top: 70px;
+}
+#reach{
+  padding-left: 100px;
+  justify-content: center;
+  padding-top: 10%
+}
+.object {
+  -webkit-animation: action 1s infinite  alternate;
+  animation: action 1s infinite  alternate;
+}
+@-webkit-keyframes action {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-10px); }
+}
+@keyframes action {
+  0% { transform: translateY(0); }
+  100% { transform: translateY(-10px); }
 }
 
-.object {
-        -webkit-animation: action 1s infinite  alternate;
-        animation: action 1s infinite  alternate;
-    }
-    @-webkit-keyframes action {
-        0% { transform: translateY(0); }
-        100% { transform: translateY(-10px); }
-    }
-    @keyframes action {
-        0% { transform: translateY(0); }
-        100% { transform: translateY(-10px); }
-    }
+a img {
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+}
+
+a img:hover {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
