--- a/style/style.css
+++ b/style/style.css
@@ -427,7 +427,7 @@ a img:hover {
     transform: translate3d(0, 0, 0);
   }
 }
-@media (max-width: 1000px){
+@media (min-width: 600px) and (max-width:1000px){
   .container{
     scroll-snap-type: none;
   }
@@ -514,5 +514,138 @@ a img:hover {
     width: 100%;
     padding-right: 0px;
     padding-top: 50px;
+  }
+}
+@media (max-width: 600px){
+  body{
+    width: 100%;
+  }
+  .container{
+    scroll-snap-type: none;
+  }
+  section{
+    height: 200vh;
+  }
+  section .name{
+    font-size: 50px;
+  }
+  .beginning{
+    padding-bottom: 20px;
+  }
+  section h1{
+    font-size: 50px;
+  }
+  .skills{
+    padding-left: 0;
+  }
+  .facts{
+    padding-right: 0;
+    padding-left: 0;
+    width: 50%;
+  }
+  .skills ul{
+    padding-left: 40px;
+    font-size: 19px;
+  }
+  .basic ul{
+    font-size: 19px;
+  }
+  .facts h3{
+    font-size: 20px;
+    text-align: center;
+  }
+  .description{
+    width: 100%;
+  }
+  section .blurb{
+    flex-direction: column;
+  }
+  .sect{
+    flex-direction: column;
+  }
+  #home{
+    height: 75vh;
+  }
+  .graphic{
+    padding-top: 70px;
+  }
+
+  #projects{
+    height: 270vh;
+  }
+  #contact{
+    height: 100vh;
+  }
+  #about{
+    height: 150vh;
+  }
+  .pics{
+    padding-left: 0;
+    width: 100%;
+    padding-bottom: 40px;
+    text-align: center;
+  }
+  .mini{
+    height:50px;
+    width: 50px;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  section .texts{
+    padding-left: 0;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  section .texts p{
+    padding-left: 0;
+  }
+  section p{
+    width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .end{
+    flex-direction: column;
+  }
+  .gord{
+    width: 300px;
+    height: 300px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .icons{
+    width: 300px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .larger{
+    width: 50px;
+    height: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  #blurb{
+    width: 80%;
+  }
+  #reach{
+    padding-top: 50px;
+    padding-left: 0;
+    text-align: center;
+  }
+  section .me{
+    display: flex;
+    flex-direction: column-reverse;
+    align-items:center;
+    justify-content: center;
+    width: 100%;
+    padding-right: 0px;
+    padding-top: 50px;
+  }
+  .description{
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
