--- a/style/style.css
+++ b/style/style.css
@@ -356,6 +356,13 @@ video{
   padding-bottom: 20px;
 
 }
+iframe {
+  width:640px;
+  height:360px;
+  margin-bottom: 50px;
+  margin-left: auto;
+  margin-right: auto;
+}
 .object {
   -webkit-animation: action 1s infinite  alternate;
   animation: action 1s infinite  alternate;
@@ -446,8 +453,14 @@ a img:hover {
   .container{
     scroll-snap-type: none;
   }
+  #blurb{
+    width: 80%;
+  }
   section{
-    height: 150vh;
+    height: 120vh;
+  }
+  #shopo{
+    padding-top: 10px;
   }
   section .name{
     font-size: 50px;
@@ -523,9 +536,6 @@ a img:hover {
     width: 50px;
     height: 50px;
   }
-  #blurb{
-    width: 80%;
-  }
   #reach{
     padding-top: 50px;
     padding-left: 0;
@@ -553,7 +563,10 @@ a img:hover {
     scroll-snap-type: none;
   }
   section{
-    height: 200vh;
+    height: 155vh;
+  }
+  #shopo{
+    padding-top: 10px;
   }
   section .name{
     font-size: 50px;
