--- a/style/style.css
+++ b/style/style.css
@@ -71,7 +71,7 @@ section{
 }
 #projects{
     justify-content:flex-start;
-    height: 250vh;
+    height: 280vh;
     scroll-snap-align: start;
 }
 #tag{
@@ -244,6 +244,9 @@ section .texts p{
   padding-left: 10%;
   width: 40%;
 }
+#shopo{
+  padding-top: 10px;
+}
 #banner{
   width: 100%;
   object-fit: cover;
@@ -336,6 +339,42 @@ section .texts p{
   margin-right: 30px;
 
 }
+form{
+  display: flex;
+  width: 100%;
+  align-items: center;
+}
+button{
+  height: 100px;
+  width: 250px;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: center;
+  border-radius: 60px;
+  font-size: 25px;
+  border: 0px;
+}
+button:hover {
+background: rgb(0, 51, 102);
+color: #FFFAE2;
+letter-spacing: 1px;
+-webkit-box-shadow: 0px 5px 40px 10px rgba(0,0,0,0.57);
+-moz-box-shadow: 0px 5px 40px 10px rgba(0,0,0,0.57);
+box-shadow: 5px 0px 10px rgba(0,0,0,0.57);
+transition: all 0.4s ease 0s;
+}
+/*
+#floater{
+  height: 50px;
+  width: 50px;
+  object-fit: cover;
+  margin-left: auto;
+  margin-right: auto;
+}
+*/
+#res{
+  height: 400px;
+}
 .end{
   display: flex;
   flex-direction: row;
@@ -356,24 +395,29 @@ video{
   padding-bottom: 20px;
 
 }
-iframe {
-  width:640px;
-  height:360px;
+.videowrap{
+  width: 640px;
+  height: 360px;
   margin-bottom: 50px;
   margin-left: auto;
   margin-right: auto;
+
+}
+.videowrap iframe {
+  width:100%;
+  height:100%;
 }
 .object {
   -webkit-animation: action 1s infinite  alternate;
   animation: action 1s infinite  alternate;
 }
 @-webkit-keyframes action {
-  0% { transform: translateY(0); }
-  100% { transform: translateY(-10px); }
+  0% { transform: translateY(0px); }
+  100% { transform: translateY(-13px); }
 }
 @keyframes action {
-  0% { transform: translateY(0); }
-  100% { transform: translateY(-10px); }
+  0% { transform: translateY(0px); }
+  100% { transform: translateY(-13px); }
 }
 
 a img {
@@ -449,6 +493,7 @@ a img:hover {
     transform: translate3d(0, 0, 0);
   }
 }
+
 @media (min-width: 600px) and (max-width:1000px){
   .container{
     scroll-snap-type: none;
@@ -457,7 +502,7 @@ a img:hover {
     width: 80%;
   }
   section{
-    height: 120vh;
+    height: 135vh;
   }
   #shopo{
     padding-top: 10px;
@@ -470,6 +515,9 @@ a img:hover {
   }
   section h1{
     font-size: 50px;
+  }
+  .title{
+    font-size: 40px;
   }
   .skills ul{
     font-size: 19px;
@@ -550,12 +598,14 @@ a img:hover {
     padding-right: 0px;
     padding-top: 50px;
   }
-  video{
-    width: 320px;
-    height: 180px;
+  .videowrap{
+    width: 80%;
   }
 }
 @media (max-width: 600px){
+  .videowrap{
+    width: 80%;
+  }
   body{
     width: 100%;
   }
@@ -563,9 +613,10 @@ a img:hover {
     scroll-snap-type: none;
   }
   section{
-    height: 155vh;
+    height: 160vh;
   }
   #shopo{
+    height: 600vh;
     padding-top: 10px;
   }
   section .name{
@@ -576,6 +627,9 @@ a img:hover {
   }
   section h1{
     font-size: 50px;
+  }
+  .title{
+    font-size: 30px;
   }
   .skills{
     padding-left: 0;
@@ -681,6 +735,7 @@ a img:hover {
   #blurb{
     width: 80%;
   }
+
   #reach{
     padding-top: 50px;
     padding-left: 0;
